# ocabox-tcs

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: dome_follower_svc.yaml  examples.yaml  services.example.yaml  services.sample.yaml  services.yaml  test-crash.yaml  test_blocking.yaml  test_external.yaml  test_legacy.yaml  test_no_config.yaml  test_services.yaml
doc/: architecture.md  development-guide.md  initialization-flow.md  migration-guide-1.0.md  nats.md  nats_propo.md  requirements-analysis.md  restart-policies.md
examples/: monitoring_client_usage.py
src/ocabox_tcs/: base_service.py  base_service_ocabox.py  config.py  dev_launcher.py
src/ocabox_tcs/launchers/: __init__.py  asyncio.py  asyncio_launcher.py  base_launcher.py  process.py  process_launcher.py  tcsd.py
src/ocabox_tcs/management/: __init__.py  bootstrap.py  configuration.py  environment.py  process_context.py  service_controller.py  service_registry.py  services_process.py
src/ocabox_tcs/monitoring/: __init__.py  create_monitor.py  monitored_object.py  monitored_object_nats.py  status.py
src/ocabox_tcs/services/: dome_follower.py  dumb_complex.py  dumb_permanent.py  hello_world.py  test_blocking.py  test_legacy.py  test_no_config.py
src/ocabox_tcs/services/dome_follower_svc/: dome_follower.py  manager.py  nats_conn.py  tic_conn.py
src/ocabox_tcs/services/dumb_complex_svc/: __init__.py  dumb_complex.py
src/ocabox_tcs/services/examples/: 01_minimal.py  02_basic.py  03_logging.py  04_monitoring.py  05_nonblocking.py  README.md  __init__.py
src/ocabox_tcs/services/guiding_svc/: guider_ofp.py  guiding.py
src/ocabox_tcs/services/test/: __init__.py  crash.py  crash_simple.py
src/ocabox_tcs/services/tic_bridge_svc/: bridge.py  client_pool.py  tic_bridge.py
src/tcsctl/: __init__.py  app.py  client.py  collector.py  display.py
src/tcsctl/commands/: __init__.py  list.py
systemd/: launcher-service.txt  ocabox-service@.service
tests/: README.md  conftest.py  rpc_control_test.py  test_cli_arguments.py  test_env_var_expansion.py  test_examples.py  test_external_services.py  test_hierarchy_display.py  test_monitoring.py  test_nats_config_type_conversion.py  test_service_discovery.py  test_tcsctl_display.py
tests/external_example/: __init__.py  external_worker.py
tests/fixtures/: nats_fixtures.py
tests/helpers/: assertions.py  config_generator.py  event_collector.py  launcher_harness.py  wait_helpers.py
tests/service_types/: test_cyclic_services.py  test_permanent_services.py  test_single_shot_services.py
tests/services/: mock_crashing.py  mock_cyclic.py  mock_permanent.py  mock_single_shot.py
tests/unit/: test_basic_lifecycle.py  test_crash_scenarios.py  test_dome_follower.py  test_event_verification.py  test_tic_bridge.py
